# laolang_tutorials

./: .gitignore  learn_python3.md
data_analytics/: .gitignore  DataLake.docx  README.md  conda.md  environment.yml  requirements.txt  什么叫有理数和无理数.ipynb  同比和环比.ipynb  大数据中常用的几种数据格式对比(avro、orc、parquet).md  物化视图(Materialized Views).docx  美国个人消费支出(PCE)价格指数.md  财经数据接口sushare.ipynb
data_analytics/jupyter_notebook_tutorials/: Jupyter_notebook中快速插入图片的简单方法.md
data_analytics/matplotlib_tutorials/: README.md  如何查看电脑操作系统中的字体.md
data_analytics/numpy_tutorials/: 001_2次多项式.ipynb  002_总和和乘积.ipynb  003_随机数.ipynb  004_sigmoid函数.ipynb  005_常见数学函数.ipynb  006_自然常数e.ipynb  007_三角函数.ipynb  三角函数中的正弦、余弦、正切、余切、正割、余割函数性质及常用公式_火柴先生的博客-CSDN博客_正切余切.html  三角函数基本概念 _ 玄数.html
data_analytics/pandas_tutorials/: Overview of Pandas Data Types.ipynb  README.md  animals.dta  df.parquet.gzip  dummy_1.json  general_functions.ipynb  input_output.ipynb  output_1.xlsx  output_2.xlsx  output_3.xlsx  pamdas_series.ipynb  pandas_series_str.ipynb  pandas使用技巧_rank(排名).ipynb  pandas技巧_fillna_backfill_frontfill.ipynb  pandas技巧_rank(排名)实现sql中的row_number, rank, dense_rank.ipynb  pandas技巧_一列文本分割成多列.ipynb  store.h5
data_analytics/parquet/: nested.parquet  parquet_Spark中的Schema兼容问题.md  parquet_嵌套数据模型.md  parquet基本原理.md  plain.parquet  用Python定义Schema并生成Parquet文件.ipynb
data_analytics/stock_data/: hs300_stocks.csv  sz50_stocks.csv
learn_flink/: Flink详细介绍_01.md  Flink详细介绍_02.md  Flink详细介绍_03.md  flink基础教程.md
learn_python3/: Datalake data type double vs decimals.md  pip.ini  python3使用技巧.ipynb  requirements.txt  关于本教程.md  开始之前.md
learn_springboot/: 入门教程.md
python_archetype/calculation-archetype/: README.md  pyproject.toml
python_archetype/calculation-archetype/calculation-archetype/: calc_app_gen.py
python_archetype/calculation-archetype/calculation-archetype/template/: pyproject.toml  sonar-project.properties
python_archetype/calculation-archetype/calculation-archetype/template/scripts/: aws-assume-role.sh
python_archetype/calculation-archetype/calculation-archetype/template/src/: app.py
tech_management/: Develop_Lifecycle.xlsx  MTBF-MTTR-MTTA-MTTF.md  SLA-SLO-SLI.md  existing_system_retro.xlsx  team_inovation.xlsx  technical_proposal_writing.docx  ~$Develop_Lifecycle.xlsx  什么是编程中的脚手架.md
(+644 files in other folders)
