[[tool.poetry.source]]
name = "public"
url = "https://pypi.org/simple/"

[[tool.poetry.source]]
name = "pypi-cap"
url = "https://msnexus.morningstar.com/repository/pypi-cap/simple"
secondary = true

[[tool.poetry.source]]
name = "pypi-hosted"
url = "https://msnexus.morningstar.com/repository/pypi-hosted/simple"
default = true

[tool.poetry]
name = "calculation-archetype"
version = "0.0.1"
description = "The calculation-archetype is used for creating a calculation application."
authors = ["Samon Liang <samon.liang@morningstar.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.0"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = "^6.4.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.6"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--junitxml results.xml --cov=calculation-archetype/ --cov-report xml:coverage.xml"
testpaths = [
    "tests",
]